fixed tab bar overflow

--- a/styles/app/TabNav.module.scss
+++ b/styles/app/TabNav.module.scss
@@ -31,6 +31,9 @@
         padding: 0px 18px;
         span {
             text-align: center;
+            max-width: Calc(100vw - 170px);
+            text-overflow: ellipsis;
+            overflow: hidden;
         }
 
         .edit {
@@ -46,6 +49,12 @@
         .tabInput {
             background: none;
             color: var(--lightest-aqua);
+            width: Calc(100vw - 170px);
+            text-align: center;
+
+            &:focus {
+                outline: none;
+            }
         }
 
         &:hover {
